  22-Jun-2020    V0.43 Add methods to return SeqAlign() from SIFTS data.
  23-Aug-2020    V0.43 Adjust InterPro ftp URL references.
   9-Oct-2020    V0.44 Add organism host taxonomy
  24-Oct-2020    V0.46 Adjust tests to handle Ubuntu 20.04 issues
  30-Nov-2020    V0.47 add UniProtIdMappingProvider() and tests.
   1-Dec-2020    V0.48 make UniProtIdMappingProvider() a singleton.
   2-Dec-2020    V0.49 Add legacy id mapping data in UniProtIdMappingProvider()
  10-Dec-2020    V0.50 Add 'tdd' format in UniProtIdMappingProvider() and improve save and load performance
  10-Dec-2020    V0.51 Add to and from stash methods in UniProtIdMappingProvider()
  22-Mar-2020    V0.52 Add backup and restore methods in  UniProtIdMappingProvider()
  23-Mar-2020    V0.53 Add clearCache methods and preserve loaded state across multiple instances of UniProtIdMappingProvider()
  10-May-2021    V0.54 Add feature and gene lookup method in UniProtUtils()
  10-May-2021    V0.55 Adjust return prototype for lookup functions
  10-May-2021    V0.56 Add review option for doGeneLookup()
  10-May-2021    V0.57 Adjustments to UniProt FASTA comment line parser
  26-May-2021    V0.58 Add Pfam mapping methods and GlyGenProvider() and associated tests
  27-May-2021    V0.59 Tweaking diagnostic output in GlyGenProvider()
  28-May-2021    V0.60 Add read-only version of GlycanProvider() and associated tests
  30-May-2021    V0.61 Add getVersion() method in PfamProvider().
  30-Jun-2021    V0.62 Make GlycanProvider() a subclass of StashableBase(), update __docformat__
  24-Jul-2021    V0.63 Make SiftsSummaryProvider() a subclass of StashableBase()
  14-Mar-2022    V0.64 Adjust parsing logic of ParentChildTreeFile.txt in InterProProvider.__getInterProParents()
  16-May-2022    V0.65 Update GlyGenProvider resource URL location
  25-Jul-2022    V0.66 Adjust UniProtUtils to temporarily use the legacy baseUrl (legacy.uniprot.org) for API calls
   4-Oct-2022    V0.67 Update UniProtUtils code to use new UniProt API